--- a/index.scss
+++ b/index.scss
@@ -1,49 +1,51 @@
-#content{
+#content {
   display: flex;
-  .filterspanel{
+  .filterspanel {
     padding-right: 5px;
     min-width: 180px;
-    .filterpanel{
-      padding-top: 2px;
+    .filterpanel {
+      padding-top: 10px;
       margin-bottom: 5px;
-      .filterpanelhead{
+      .filterpanelhead {
         background-color: #4cbdec;
         color: white;
         padding: 5px;
         font-weight: bold;
       }
-      .filterpanelbody{
-        .tag{
+      .filterpanelbody {
+        border: 1px solid #4cbdec;
+        .tag {
           margin-top: 2px;
           padding-top: 2px;
           border: 1px solid white;
         }
-        .selected{
-          //border: 1px solid #4cbdec;
+        .selected {
           font-weight: bold;
         }
       }
     }
   }
-  .resultspanel{
+  .resultspanel {
     display: flex;
     flex-flow: row;
     flex-wrap: wrap;
-    .solution{
+    .solution {
       flex-basis: 50%;
-      padding: 2px;
+      padding: 10px;
       min-width: 200px;
-      .solutionheadline{
+      .solutionheadline {
         background-color: #4cbdec;
         padding: 5px;
-        .solutionheadlinelink{
+        .solutionheadlinelink {
           color: white;
           font-weight: bold;
         }
       }
-      .solutionimage{
-        max-width: 100%;
-        height: auto;
+      .solutionbody {
+        .solutionimage {
+          max-width: 100%;
+          height: auto;
+        }
       }
     }
   }
