Changed highlighting of selected

--- a/index.scss
+++ b/index.scss
@@ -18,9 +18,10 @@
           margin-top: 2px;
           padding-top: 2px;
           border: 1px solid white;
-        }
-        .selected {
-          font-weight: bold;
+          .material-icons-sharp {
+            vertical-align: sub;
+            color: #4cbdec;
+          }
         }
       }
     }
