Changed alignment of checkbox

--- a/index.scss
+++ b/index.scss
@@ -19,7 +19,7 @@
           padding-top: 2px;
           border: 1px solid white;
           .material-icons-sharp {
-            vertical-align: sub;
+            vertical-align: text-top;
           }
           &:not(.disabled) > .material-icons-sharp {
             color: #4cbdec;
