--- a/index.scss
+++ b/index.scss
@@ -35,6 +35,8 @@
     display: flex;
     flex-flow: row;
     flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
     .solution {
       flex-basis: 50%;
       padding: 10px;
