--- a/index.scss
+++ b/index.scss
@@ -51,7 +51,7 @@
       }
       .solutionbody {
         .solutionimage {
-          max-width: 100%;
+          width: 100%;
           height: auto;
         }
       }
