--- a/index.scss
+++ b/index.scss
@@ -37,6 +37,7 @@
     flex-wrap: wrap;
     align-items: flex-start;
     align-content: flex-start;
+    margin-bottom: 80px;
     .solution {
       flex-basis: 50%;
       padding: 10px;
@@ -55,6 +56,21 @@
           height: auto;
         }
       }
-    }
+    }   
+  }
+  #pagination {
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+  }
+  #pagination :hover{
+    cursor: pointer;
+  }
+  #pagination .pageBtn {
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .8rem;
+    text-align: center;
   }
 }
