Update solution page

--- a/index.scss
+++ b/index.scss
@@ -9,14 +9,14 @@
         background-color: #4cbdec;
         color: white;
         padding: 5px;
-        font-weight: bold;
       }
       .filterpanelbody {
-        border: 1px solid #4cbdec;
+	    background-color: #f9f9f9;
+	    border-style: None;
         .tag {
           margin-top: 2px;
           padding-top: 2px;
-          border: 1px solid white;
+		  margin-left: 1.4rem;
           .material-icons-sharp {
             vertical-align: text-top;
           }
@@ -40,7 +40,6 @@
         padding: 5px;
         .solutionheadlinelink {
           color: white;
-          font-weight: bold;
         }
       }
       .solutionbody {
@@ -65,9 +64,6 @@
     text-align: center;
   }
   .search-bar #search-field-solutions{
-    content: " ";
-    border-style: solid;
-    border-color: transparent transparent white transparent;
-    width: 165px;
+	width: 90vw;
   }
 }
