--- a/index.scss
+++ b/index.scss
@@ -66,7 +66,9 @@
   .search-bar {
 	  padding-right: 2rem;
 	  #search-field-solutions{
-		width: -webkit-fill-available;
+		width: -moz-available;          
+		width: -webkit-fill-available; 
+		width: fill-available;
 	  }
   }
 }
