--- a/index.scss
+++ b/index.scss
@@ -66,6 +66,7 @@
   .search-bar {
 	  padding-right: 2rem;
 	  #search-field-solutions{
+	    width: 80%;
 		width: -moz-available;          
 		width: -webkit-fill-available; 
 		width: fill-available;
