--- a/index.scss
+++ b/index.scss
@@ -63,7 +63,13 @@
     border-radius: .8rem;
     text-align: center;
   }
-  .search-bar #search-field-solutions{
-	width: 90vw;
+  .search-bar {
+	  padding-right: 2rem;
+	  #search-field-solutions{
+	    width: 80%;
+		width: -moz-available;          
+		width: -webkit-fill-available; 
+		width: fill-available;
+	  }
   }
 }
